<resources>
    <string name="app_name">FitNest</string>
    <string name="onboarding_text1">Your Personal </string>
    <string name="onboarding_text2">AI Trainer in Your Pocket</string>
    <string name="get_started">Get Started -></string>
    <string name="already_have_account">Already have account?</string>
    <string name="discover_workout_set">Discover Workout</string>
    <string name="create_set">Create Set</string>
    <string name="popular_workout_set">Popular Workout Set</string>
    <string name="start_text">START</string>
    <string name="banner_text">Get Premium</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="success_register">Register Success</string>
    <string name="default_web_client_id">700415588444-njrs1o4dt1ii18gc716tdc97neun64lg.apps.googleusercontent.com</string>


    <string-array name="data_set_name">
        <item>Rehan Anjay Mabar</item>
        <item>30 Hari jadi eren yeger</item>
        <item>Gilang Bengkel Aerox</item>
        <item>Windah Batubara diet</item>
        <item>Wibukuat</item>
        <item>Pengen Sixpack UY</item>
        <item>Khusus orang kuat</item>
        <item>gaktau nama</item>
        <item>wdkwodkowdwj</item>
    </string-array>
    <string-array name="data_set_time">
        <item>4 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>
        <item>10 Exercises</item>

    </string-array>
    <integer-array name="data_set_image">
        <item>@drawable/set_image1</item>
        <item>@drawable/set_image1</item>
        <item>@drawable/set_image1</item>
        <item>@drawable/set_image2</item>
        <item>@drawable/set_image2</item>
        <item>@drawable/set_image2</item>
        <item>@drawable/set_image3</item>
        <item>@drawable/set_image3</item>
        <item>@drawable/set_image3</item>
    </integer-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_list">Workout List</string>


    <integer-array name="data_exercise_image">
        <item>@drawable/set_image1</item>
        <item>@drawable/set_image1</item>
        <item>@drawable/set_image1</item>
        <item>@drawable/set_image2</item>
        <item>@drawable/set_image2</item>
        <item>@drawable/set_image2</item>
        <item>@drawable/set_image3</item>
        <item>@drawable/set_image3</item>
        <item>@drawable/set_image3</item>
    </integer-array>

    <string-array name="data_exercise_name">
        <item>Push Up</item>
        <item>Sit Up</item>
        <item>Pull Up</item>
        <item>Pistol Squat</item>
        <item>Lunges</item>
        <item>Squat</item>
        <item>Crunch</item>
        <item>Plank</item>
        <item>Jumping Jacks</item>
    </string-array>

    <string-array name="data_exercise_time">
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
        <item>1x20</item>
    </string-array>

    <string-array name="data_exercise_description">
        <item>The push-up is a common calisthenics exercise beginning from the prone position. By raising and lowering the body using the arms</item>
        <item>The sit-up is an abdominal endurance training exercise to strengthen, tighten and tone the abdominal muscles. It is similar to a crunch, but sit-ups have a fuller range of motion and condition additional muscles.</item>
        <item>A pull-up is an upper-body strength exercise. The pull-up is a closed-chain movement where the body is suspended by the hands, gripping a bar or other implement at a distance typically wider than shoulder-width, and pulled up.</item>
        <item>The pistol squat is a variation of the single-leg squat. Perform pistol squats by lowering your body on one leg with your arms extended in front of you to counterbalance your bodyweight.</item>
        <item>A lunge can refer to any position of the human body where one leg is positioned forward with knee bent and foot flat on the ground while the other leg is positioned behind</item>
        <item>A squat is a strength exercise in which the trainee lowers their hips from a standing position and then stands back up.</item>
        <item>The crunch movement is almost like sit-ups. However, this movement only lifts the upper body, namely the head and shoulders. Apart from the abdominal muscles, crunches can also train and strengthen the muscles of the shoulders, arms, buttocks and legs.</item>
        <item>The plank is an isometric core strength exercise that involves maintaining a position similar to a push-up for the maximum possible time.</item>
        <item>A jumping jack, also known as a star jump and called a side-straddle hop in the US military, is a physical jumping exercise performed by jumping to a position with the legs spread wide and the hands going overhead, sometimes in a clap, and then returning to a position with the feet together and the arms at the sides.</item>
    </string-array>


    <string-array name="data_diet_name">
        <item>Jagung</item>
        <item>Kacang</item>
    </string-array>

    <string-array name="data_diet_calorie">
        <item>132.0 cal</item>
        <item>117.0 cal</item>
    </string-array>

    <string-array name="data_diet_fat">
        <item>1.82 g</item>
        <item>0.68 g</item>
    </string-array>

    <string-array name="data_diet_carbohydrate">
        <item>29.29 g</item>
        <item>20.97 g</item>
    </string-array>

    <string-array name="data_diet_protein">
        <item>4.96 g</item>
        <item>7.86 Cal</item>
    </string-array>


    <string name="title_activity_camera_component">CameraComponent</string>
    <string name="gain_muscle">Gain Muscle</string>
    <string name="keep_fit">Keep Fit</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="improving_posture">Improving Posture</string>
    <string name="what_target_muscles_do_you_want_to_train">What target muscles do you want to train?</string>
    <string name="legs">Legs</string>
    <string name="triceps">Triceps</string>
    <string name="glutes">Glutes</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="abs">ABS</string>
    <string name="shoulder">Shoulder</string>
    <string name="hand">Hand</string>
    <string name="biceps">biceps</string>
    <string name="hamstring">Hamstring</string>
    <string name="what_kind_of_food_do_you_eat">What kind of food do you eat?</string>
    <string name="flexitarian">Flexitarian</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="carnivore">Carnivore</string>
    <string name="you_can_choose_more_than_one">You can choose more than one</string>
    <string name="save">Save</string>
    <string name="choose_your_goal_using_fitnest">Choose your goal using FitNest</string>
    <string name="diet">Diet</string>


</resources>